--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ body {
 }
 
 .info-container {
-  background: rgb(238, 238, 238);
+  background: #fff;
   width: 100%;
   height: 100%;
   border-radius: 50px 50px 0 0;
