--- a/style.css
+++ b/style.css
@@ -167,8 +167,22 @@ body {
   position: relative;
   width: 100%;
   height: 250px;
-  border-radius: 16px;
-  margin: 20px 0;
+  border-radius: 16px 16px 0 0 ;
+  margin: 20px 0 0 0 ;
+  
+}
+
+#comment{
+  margin-top: 0;
+  background-color: #9200d625;
+  border-radius: 0 0 16px 16px;
+  color: #43085f;
+  font-size: small;
+  text-align: left;
+  padding: 8px;
+  line-height: 1.4em;
+  border: 1px #43085f solid;
+  
 }
 
 .video-container iframe {
